Fix Mole Smash shifting

--- a/Frontend/src/pages/WhacAMole.css
+++ b/Frontend/src/pages/WhacAMole.css
@@ -1,3 +1,19 @@
+body {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/public/mole-background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 #root {
   height: 100%;
   width: 100%;
@@ -5,7 +21,6 @@
   justify-content: center;
   align-items: center;
 }
-
 
 .game-container {
   display: flex;
@@ -222,7 +237,11 @@
   font-size: 1.2em;
   font-weight: bold;
   text-shadow: 1px 1px 2px #000;
-  padding: 5px 0;
+}
+
+.score {
+  margin-top: 5px;
+  margin-left: 10px;
 }
 
 .top-scores li.header {
@@ -237,31 +256,14 @@
   color: #bcfc55;
 }
 
-.username-header {
+.top-scores li span {
   flex: 1;
-  display: flex;
-  justify-content: center; 
-  align-items: center;  
+  text-align: center;
 }
 
-.score-header {
-  flex: 1;
-  display: flex;
-  margin-left: 50px;
-  justify-content: center; 
-  align-items: center;    
+.top-scores li span:nth-child(2) {
+  flex: 0.1;
 }
-
-.username {
-  justify-content: flex-start;
-}
-
-.players-score {
-  justify-content: flex-end;
-  padding-right: 36px;
-
-}
-
 
 .score-badge {
   display: flex;
@@ -332,6 +334,10 @@
   background-color: #dddddd53;
   border-radius: 50%;
   position: absolute;
+}
+
+.mole-hole.game-over {
+  cursor: pointer;
 }
 
 .burst-image {
